#*****************************************************************************
# meson.build (seq66)
#-----------------------------------------------------------------------------
##
# \file        Seq66cli/meson.build
# \library     seq66
# \author      Chris Ahlstrom
# \date        2026-04-25
# \updates     2026-06-01
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "seq66" library/application. See the top-level
#  meson.build file for license information.
#
#-----------------------------------------------------------------------------

   seq66cli_exe = executable(
      'seq66cli',
      sources : [ 'seq66rtcli.cpp' ],
      dependencies : [ seq66_dep, liblib66_library_dep ],
      install : true
      )

#****************************************************************************
# meson.build (Seq66cli)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
